tests/valid/definite/Process_Valid_3.whiley
void System::main([string] args):
    x = this->out
    print "GOT HERE"
