tests/invalid/simple/If_CompileFail_5.whiley
bool System::f():
    return true

void System::main([string] args):
    if(this->f()):
        print "Got here"
